--- a/app/src/main/res/layout/fragment_detail_product.xml
+++ b/app/src/main/res/layout/fragment_detail_product.xml
@@ -6,19 +6,15 @@
     android:layout_height="match_parent"
     tools:context=".presentation.main.product.detail.DetailProductFragment">
 
-    <!-- TODO: Update blank fragment layout -->
-
-
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="12dp"
         android:layout_marginTop="12dp"
-        android:src="@drawable/ic_round_arrow_back_24"
         android:backgroundTint="@color/white"
-        app:layout_constraintTop_toTopOf="parent"
+        android:src="@drawable/ic_round_arrow_back_24"
         app:layout_constraintStart_toStartOf="parent"
-        />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <ImageView
         android:id="@+id/imageView"
@@ -34,11 +30,11 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
+        android:fontFamily="@font/poppins_bold"
         android:text="@string/product_name"
         android:textAppearance="@android:style/TextAppearance.Material"
         android:textSize="20dp"
         android:textStyle="bold"
-        android:fontFamily="@font/poppins_bold"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/imageView" />
 
@@ -47,107 +43,127 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="4dp"
+        android:fontFamily="@font/poppins_bold"
         android:text="@string/product_price"
         android:textAppearance="@android:style/TextAppearance.Material"
         android:textSize="26dp"
         android:textStyle="bold"
-        android:fontFamily="@font/poppins_bold"
         app:layout_constraintEnd_toEndOf="@+id/productName"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="@+id/productName"
         app:layout_constraintTop_toBottomOf="@+id/productName" />
 
-    <TextView
-        android:id="@+id/textKategori"
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/layoutDescription"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="36dp"
-        android:text="@string/kategori"
-        android:textAppearance="@android:style/TextAppearance.Material"
-        android:textStyle="bold"
-        android:fontFamily="@font/poppins_bold"
         app:layout_constraintStart_toStartOf="@id/price"
-        app:layout_constraintTop_toBottomOf="@id/price" />
+        app:layout_constraintTop_toTopOf="@id/price">
 
-    <TextView
-        android:id="@+id/textDescription"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="12dp"
-        android:text="Deskripsi"
-        android:textAppearance="@android:style/TextAppearance.Material"
-        android:textStyle="bold"
-        android:fontFamily="@font/poppins_bold"
-        app:layout_constraintEnd_toEndOf="@+id/textKategori"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="@+id/textKategori"
-        app:layout_constraintTop_toBottomOf="@+id/textKategori" />
+        <TextView
+            android:id="@+id/textKategori"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:fontFamily="@font/poppins_bold"
+            android:text="@string/kategori"
+            android:textAppearance="@android:style/TextAppearance.Material"
+            android:textStyle="bold"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
-    <TextView
-        android:id="@+id/tvDescription"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="28dp"
-        android:layout_marginTop="4dp"
-        android:text="Deskripsi"
-        android:fontFamily="@font/poppins_regular"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toEndOf="@+id/textDescription"
-        app:layout_constraintTop_toTopOf="@+id/textDescription" />
+        <TextView
+            android:id="@+id/textDescription"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="12dp"
+            android:fontFamily="@font/poppins_bold"
+            android:text="Deskripsi"
+            android:textAppearance="@android:style/TextAppearance.Material"
+            android:textStyle="bold"
+            app:layout_constraintEnd_toEndOf="@+id/textKategori"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintStart_toStartOf="@+id/textKategori"
+            app:layout_constraintTop_toBottomOf="@+id/textKategori" />
 
-    <TextView
-        android:id="@+id/tvMerk"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:fontFamily="@font/poppins_regular"
-        android:text="@string/merk"
-        app:layout_constraintBottom_toBottomOf="@+id/textMerk"
+        <TextView
+            android:id="@+id/tvDescription"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="28dp"
+            android:layout_marginTop="4dp"
+            android:fontFamily="@font/poppins_regular"
+            android:text="Deskripsi"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintStart_toEndOf="@+id/textDescription"
+            app:layout_constraintTop_toTopOf="@+id/textDescription" />
 
-        app:layout_constraintStart_toStartOf="@+id/tvDescription"
-        app:layout_constraintTop_toTopOf="@+id/textMerk"
-        app:layout_constraintVertical_bias="0.0" />
+        <TextView
+            android:id="@+id/tvMerk"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:fontFamily="@font/poppins_regular"
+            android:text="@string/merk"
+            app:layout_constraintBottom_toBottomOf="@+id/textMerk"
 
-    <TextView
-        android:id="@+id/textMerk"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="12dp"
-        android:text="Merk"
-        android:textAppearance="@android:style/TextAppearance.Material"
-        android:textStyle="bold"
-        android:fontFamily="@font/poppins_bold"
-        app:layout_constraintEnd_toEndOf="@+id/textDescription"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="@+id/textDescription"
-        app:layout_constraintTop_toBottomOf="@+id/textDescription" />
+            app:layout_constraintStart_toStartOf="@+id/tvDescription"
+            app:layout_constraintTop_toTopOf="@+id/textMerk"
+            app:layout_constraintVertical_bias="0.0" />
 
-    <TextView
-        android:id="@+id/tvKategori"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="30dp"
-        android:text="@string/kategori"
-        android:fontFamily="@font/poppins_regular"
-        app:layout_constraintBottom_toBottomOf="@+id/textKategori"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.019"
-        app:layout_constraintStart_toEndOf="@id/textKategori"
-        app:layout_constraintTop_toTopOf="@id/textKategori"
-        app:layout_constraintVertical_bias="1.0" />
+        <TextView
+            android:id="@+id/textMerk"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="12dp"
+            android:fontFamily="@font/poppins_bold"
+            android:text="Merk"
+            android:textAppearance="@android:style/TextAppearance.Material"
+            android:textStyle="bold"
+            app:layout_constraintEnd_toEndOf="@+id/textDescription"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintStart_toStartOf="@+id/textDescription"
+            app:layout_constraintTop_toBottomOf="@+id/textDescription" />
 
+        <TextView
+            android:id="@+id/tvKategori"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="30dp"
+            android:fontFamily="@font/poppins_regular"
+            android:text="@string/kategori"
+            app:layout_constraintBottom_toBottomOf="@+id/textKategori"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.019"
+            app:layout_constraintStart_toEndOf="@id/textKategori"
+            app:layout_constraintTop_toTopOf="@id/textKategori"
+            app:layout_constraintVertical_bias="1.0" />
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
     <Button
         android:id="@+id/buttonEdit"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="40dp"
-        android:text="@string/edit_product"
         android:fontFamily="@font/poppins_bold"
+        android:text="@string/edit_product"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.501"
         app:layout_constraintStart_toStartOf="parent" />
 
+    <ProgressBar
+        android:id="@+id/progressBar"
+        style="?android:attr/progressBarStyle"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_vertical|center_horizontal"
+        android:visibility="gone"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:visibility="visible" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
