--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -24,6 +24,9 @@
         <action
             android:id="@+id/action_mainSearchFragment_to_createProductFragment"
             app:destination="@id/createProductFragment" />
+        <action
+            android:id="@+id/action_mainSearchFragment_to_detailProductFragment"
+            app:destination="@id/detailProductFragment" />
     </fragment>
     <fragment
         android:id="@+id/profileFragment"
@@ -35,4 +38,9 @@
         android:name="com.bangkit.hargain.presentation.main.product.create.CreateProductFragment"
         android:label="@string/add_product"
         tools:layout="@layout/fragment_create_product" />
+    <fragment
+        android:id="@+id/detailProductFragment"
+        android:name="com.bangkit.hargain.presentation.main.product.detail.DetailProductFragment"
+        android:label="fragment_detail_product"
+        tools:layout="@layout/fragment_detail_product" />
 </navigation>
