--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -42,5 +42,9 @@
         android:id="@+id/detailProductFragment"
         android:name="com.bangkit.hargain.presentation.main.product.detail.DetailProductFragment"
         android:label="fragment_detail_product"
-        tools:layout="@layout/fragment_detail_product" />
+        tools:layout="@layout/fragment_detail_product" >
+        <action
+            android:id="@+id/action_detailProductFragment_to_mainSearchFragment"
+            app:destination="@id/mainSearchFragment" />
+    </fragment>
 </navigation>
