--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -11,6 +11,7 @@
 
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="red">#FF0E0E</color>
 
     <color name="primary_0">#E8F6FC</color>
     <color name="primary_10">#BBE3F6</color>
