--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -6,6 +6,7 @@
         <item name="cornerRadius">10dp</item>
         <item name="android:textStyle">bold</item>
     </style>
+
     <style name="buttonSecondary">
         <item name="backgroundTint">@color/white</item>
         <item name="android:textColor">@color/primary_50</item>
@@ -13,7 +14,16 @@
         <item name="strokeWidth">0.75dp</item>
         <item name="cornerRadius">10dp</item>
         <item name="android:textStyle">bold</item>
+    </style>
 
+    <style name="iconButton" parent="Widget.MaterialComponents.Button.OutlinedButton">
+        <item name="iconPadding">0dp</item>
+        <item name="android:insetTop">0dp</item>
+        <item name="android:insetBottom">0dp</item>
+        <item name="android:paddingLeft">12dp</item>
+        <item name="android:paddingRight">12dp</item>
+        <item name="android:minWidth">48dp</item>
+        <item name="android:minHeight">48dp</item>
     </style>
     
     <style name="progressBarPrimary">
